[tool.poetry]
name = "lesson"
version = "0.1.0"
description = ""
authors = ["sergh.al <sergh.al@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.1.1"
requests = "^2.27.1"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
